# 100-Python-Projects

./: .gitignore  ProjectsList.txt  README.md
01-SnakeGame/: README.md  main.py
01-SnakeGame/src/: game.py  menu_principal.py  window_control.py
02-SistemaDeLogin/: README.md  main.py
02-SistemaDeLogin/db/: sistem.db
02-SistemaDeLogin/src/: back.py  crud.py  database.py  front.py  utils.py
03-Pomodoro/: main.py
05-CarRental/: README.md
05-CarRental/anotacoes/dbeaver/: create-clients.sql
05-CarRental/src/data/interfaces/: clients_repository.py
05-CarRental/src/data/use_cases/: client_finder.py  client_finder_test.py
05-CarRental/src/domain/models/: clients.py
05-CarRental/src/domain/use_case/: client_finder.py
05-CarRental/src/infra/db/entities/: clients.py
05-CarRental/src/infra/db/repositories/: clients_repository.py  clients_repository_test.py
06-CompareDocs/: configs.py  main.py  pyproject.toml
06-CompareDocs/data/: documentA-inverse.txt  documentA.txt  documentB-inverse.txt  documentB.txt
06-CompareDocs/src/: call_model_utils.py  document.py  document_pool.py  event_input.py  joogle_ditto.py  openai_utils.py  parse_event.py  prompt.py  utils_typing.py
06-CompareDocs/src/preprocess_document/: __init__.py  base_preprocess.py  default_preprocess.py  factory_preprocess.py  lda_preprocess.py  llm_agent_preprocess.py  minhash_preprocess.py  prefixtrie_preprocess.py
06-CompareDocs/src/prompt_utils/: __init__.py  compare_prompt.py  llm_preprocess_prompt.py
35-API-Inutil/: README.md
36-SQLALchemyDoAvesso/: README.md
(+3 files in other folders)
